# libsquid

./: .gitignore  CMakeLists.txt  README.md
include/: squid.h
include/squid/: snet.h  socket.h
lab/pico/: README.md  launch.json
lib/: CMakeLists.txt
lib/squid/: CMakeLists.txt  burst.c  init.c  internal.h  link.c  protocol.c  protocol_internal.h  socket.c  util.c
src/: CMakeLists.txt  main.c
tests/: test_squid.c
